--- a/environment.yaml
+++ b/environment.yaml
@@ -18,7 +18,12 @@ dependencies:
   - basemap # for tudat.plotting
   # Other doc related
   - jinja2
-  - yaml
+  - pyyaml
   - pydantic
   - numpydoc
   - doxygen # for cpp api
+  - pip
+  - pip:
+      - sphinxcontrib-napoleon
+      - furo
+      - sphinx_rtd_theme
