Small fixes to API (ABM integrator and renaming of mass_rate to mass).

--- a/docstrings/simulation/propagation_setup/integrator.yaml
+++ b/docstrings/simulation/propagation_setup/integrator.yaml
@@ -457,7 +457,7 @@ functions:
       The tolerance is composed of an absolute and a relative part.
       Different coefficient sets (Butcher's tableau) can be used (see the `RungeKuttaCoefficients::CoefficientSets` enum).
 
-    parameters: # [cpp]
+    parameters:
       - name: initialTime # [cpp]
         type: double # [cpp]
       - name: initial_time # [py]
