--- a/environment.yaml
+++ b/environment.yaml
@@ -4,7 +4,7 @@ channels:
   - tudat-team
 dependencies:
   # All standard tudat-bundle deps are needed for sphinx-documentation for tudatpy.
-  - eigen
+  - eigen=3.3.7
   - boost-cpp=1.72
   - tudat-resources
   - sofa-cmake
